# personalvibe

./: .buildinfo  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.html  LLM_PROVIDERS.html  ONBOARDING.html  README.md  RELEASE.md  docker-compose.yml  genindex.html  index.html  license.html  noxfile.py  objects.inv  pyproject.toml  reference.html  run.py  search.html  searchindex.js  using_in_other_projects.html  wasmtime_integration.html
.doctrees/: INSTALL.doctree  LLM_PROVIDERS.doctree  ONBOARDING.doctree  environment.pickle  index.doctree  license.doctree  reference.doctree  using_in_other_projects.doctree  wasmtime_integration.doctree
.github/workflows/: build-bwrap.yml  pages.yaml  pages.yml  pages2.yml  publish.yml  tests.yml
_sources/: INSTALL.md.txt  reference.rst.txt  using_in_other_projects.md.txt  wasmtime_integration.md.txt
docs/: INSTALL.md  LLM_PROVIDERS.md  ONBOARDING.md  conf.py  using_in_other_projects.md
prompts/: agent_collaboration_approach.md  code_style_guide.md  core_commands.md  cursor_rules.md
prompts/design/: dndassist.md  improvisor.md  personalvibe.md  relmirror.md  storymaker.md
prompts/personalvibe/: generate_diff.md  prd.md  workflow.md
prompts/personalvibe/configs/: 0.2.0.yaml  1.0.0.yaml  1.1.0.yaml  1.1.1.yaml  1.2.0.yaml  1.2.1.yaml  1.2.10.yaml  1.2.2.yaml  1.2.3.yaml  1.2.4.yaml  1.2.5.yaml  1.2.6.yaml  1.2.7.yaml  1.3.0.yaml  1.3.1.yaml  2.0.0.yaml  2.1.0.yaml  2.2.0.yaml  2.3.0.yaml  2.3.1.yaml  2.4.0.yaml  2.5.0.yaml  3.0.0.yaml  3.1.0.yaml  3.1.1.yaml  3.1.2.yaml  3.1.3.yaml  3.2.0.yaml  3.3.0.yaml  3.4.0.yaml  3.5.0.yaml  4.0.0.yaml  4.1.0.yaml  4.1.1.yaml  4.1.2.yaml  4.1.4.yaml  4.2.0.yaml  4.3.0.yaml  4.3.1.yaml  4.4.0.yaml  (+38 more)
prompts/personalvibe/context/: codefiles.txt  documentation.txt  litellm.md
prompts/personalvibe/errors/: 01_error.md  02_error.md  1.1.1.md  1.2.1.md  1.2.10.md  1.2.2.md  1.3.1.md  2.3.1.md
prompts/personalvibe/stages/: 1.0.0.md  1.1.0.py  1.2.0.py  1.2.2.py  1.2.3.py  1.2.4.py  1.2.5.py  1.2.6.py  1.2.7.py  1.2.8.py  1.2.9.py  1.3.0.py  1.4.0.py  2.0.0.md  2.1.0.py  2.2.0.py  2.3.0.py  2.3.1.py  2.4.0.py  2.5.0.py  3.0.0.md  3.1.0.py  3.1.1.py  3.1.3.py  3.2.0.py  3.3.0.py  4.0.0.md  4.1.0.py  4.1.1.py  4.1.2.py  4.1.3.py  4.1.4.py  4.2.0.py  4.3.0.py  4.3.1.py  4.4.0.py  4.5.0.py  5.0.0.md  5.1.0.py  5.1.6.py  (+23 more)
prompts/storymaker/: _README.md  chiki.md  code_example.py  generate_chapter.md  generate_story.md  prd.md  prd_v2.md  story_example.csv
prompts/storymaker/context/: codefiles.txt
prompts/storymaker/errors/: 01_error.md  02_error.md  03_error.md  04_error.md  05_error.md  06_error.md  07_error.md  08_error.md  09_error.md  10_error.md  11_testing.md  12_error.md  13_error.md  14_error.md  15_error.md  16_error.md
prompts/storymaker/stages/: 01_bootstrap_structure.py  02_chunking_strategy.md  03_bootstrap_chunk1.py  04_bootstrap_chunk2.py  05_bootstrap_chunk3.py  06_testing.md  07_bootstrap_chunk4.py  08_testing.md  09_chunking_strategy.md  10_bootstrap_p3a.py  11_bootstrap_p3b.py  12_bootstrap_p3c.py  13_bootstrap_p3d.py  14_bootstrap_p3e.py  15_chunking_strategy.md
src/: __init__.py
src/personalvibe/: _README.md  __init__.py  cli.py  git_utils.py  llm_router.py  logger.py  parse_stage.py  run_context.py  run_pipeline.py  task_config.py  utils.py  vibe_utils.py  wasmtime_core.py
src/personalvibe/_bin/: wasmtime-darwin-aarch64-min
src/personalvibe/commands/: milestone.py  sprint.md  sprint.py
src/personalvibe/data/: master.md
src/personalvibe/data/tasks/: bugfix.yaml  sprint.yaml
src/storymaker/: _README.md  config.py  logging_config.py
src/storymaker/api/: _README.md  __init__.py  app.py  errors.py  jobs.py  pagination.py  routes.py  schemas.py  spec_blueprint.py
src/storymaker/auth/: _README.md  auth.py
src/storymaker/data/: _README.md  storage.py
src/storymaker/dto/: __init__.py  response.py
src/storymaker/jobs/: __init__.py
src/storymaker/models/: _README.md  __init__.py  book.py  chapter.py  character.py  user.py
src/storymaker/web/: _README.md  __init__.py
src/storymaker/web/static/: _README.md
src/storymaker/web/templates/: _README.md
storymaker_spa/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
storymaker_spa/src/: App.tsx
storymaker_spa/src/api/: client.ts  mock.ts  types.ts
storymaker_spa/src/components/: CharacterSelect.tsx  NavBar.tsx  StepProgress.tsx
storymaker_spa/src/pages/: AccountPage.tsx  BooksPage.tsx  CharactersPage.tsx  IndexPage.tsx  StudioPage.tsx
tests/: _README.md  __init__.py  _test_results.txt  conftest.py  dummy_patch.py  personalvibe.sh  test_api_endpoints.py  test_api_spec.py  test_auth.py  test_bugfix_mode.py  test_cli_basic.py  test_cli_new_cmds.py  test_cli_run_delegate.py  test_cli_subcommands.py  test_config_schema_v2.py  test_context_loader.py  test_custom_sharp_boe.py  test_default_model.py  test_determine_next_version.py  test_get_vibed_router.py  test_jobs.py  test_llm_router.py  test_log_to_cm.py  test_log_to_subprocess.py  test_logger.py  test_logger_runid.py  test_logging.py  test_model_selection.py  test_personalvibe_sh_open_flag.py  test_project_detection.py  test_prompt_only_smoke.py  test_resource_fallback.py  test_retry_engine.py  test_run_context.py  test_save_prompt_duplicate.py  test_storage.py  test_vibed_no_duplicates.py  test_vibed_session.py  test_wasmtime_core.py  test_workspace_root.py  (+1 more)
