[tool.poetry]
name = "personalvibe"
packages = [
    { include = "personalvibe", from = "src" }
]
version = "2.7.4"
description = "My personal vibecoding."
license = "MIT"
authors = ["Nick Jenkins"]
readme = "README.md"
homepage = "https://www.ndjenkins.com/"
repository = "https://github.com/ndjenkins85/personalvibe/"
documentation = "https://ndjenkins85.github.io/personalvibe/"
keywords = [
    "flask",
    "personalvibe",
    "python_packaging",
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
include = [
    { path = "LICENSE"},
    { path = "README.md"},
    { path = "src/personalvibe/data/*.md"},
    { path = "tests/personalvibe.sh"},
    { path = "src/personalvibe/_bin/wasmtime-darwin-aarch64-min",  format = "wheel" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
litellm = ">=1.40"

jinja2 = "^3.1.6"
openai = "^1.77.0"
pathspec = "^0.12.1"
pydantic = "^2.0"
pydantic-settings = "^2.9.1"
python-dotenv = "^0.21"
pytz = "^2025.1"
pyyaml = "^6.0"
requests = ">=2.29,<3.0"
tenacity = "^9.0"
tiktoken = "^0.9.0"
tqdm = "^4.67"
nox-poetry = "^1.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1"
nox = "^2025.2"
nox-poetry = "^1.1"
pre-commit = "^4.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4"

[tool.poetry.group.lint.dependencies]
black = "^25.1"
darglint = "^1.8"
flake8 = "^7.1"
mypy = "^1.15"
safety = "^3.2"
xdoctest = "^1.2"
flake8-annotations = "^3.1"
flake8-bandit = "^4.1"
flake8-bugbear = "^24.12"
flake8-builtins = "^2.5"
flake8-docstrings = "^1.7"
types-pyyaml = "^6.0"
types-requests = "^2.32.0"
types-Markdown = "^3.7"
types-pytz = "^2025.1"

[tool.poetry.group.docs.dependencies]
sphinx = { version = "^7.4", python = ">=3.9" }
sphinx-rtd-theme = "^3.0"
sphinx-autodoc-typehints = "^2.3"
myst-parser = { version = "^3.0", python = ">=3.9" }

[tool.poetry.scripts]
pv = "personalvibe.cli:app"
personalvibe = "personalvibe.cli:app"

[tool.poetry-version-plugin]
source = "init"

[build-system]
# Keep poetry version same as in github actions and Dockerfile
requires = ["poetry>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "advanced: marks tests as advanced (deselect with '-m \"not advanced\"')"
]

[tool.isort]
profile = "black"
known_local_folder = ["personalvibe"]
skip_glob = [
    "personalvibe/__init__.py",
    "personalvibe/views.py",
    ]

[tool.mypy]
python_version = "3.12"


allow_redefinition = true
[[tool.mypy.overrides]]
module = [
    'flask_cors',
    'flask_sslify',
    'sphinx_rtd_theme',
    'nox.*',
    'pytest',
    ]
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
source = [
    "personalvibe",
    "tests",
    "noxfile.py",
    "docs/conf.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
include = ["LICENSE", "README.md", "src/personalvibe/data/*.md", "src/personalvibe/data/*.yaml"]
